--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Repository related to the Back End of my authorial project associated with the work I developed on the archaeological site of Cais do Valongo.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=development nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/server.ts' -e ts"
   },
   "repository": {
     "type": "git",
@@ -23,9 +24,15 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "nodemon": "^2.0.22",
-    "typescript": "^5.0.4"
+    "prisma": "^4.12.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "ttypescript": "^1.5.15",
+    "typescript": "^5.0.4",
+    "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
