--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "@types/uuid": "^9.0.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
@@ -40,6 +41,7 @@
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
-    "joi": "^17.9.1"
+    "joi": "^17.9.1",
+    "uuid": "^9.0.0"
   }
 }
